fixed dark mode button to old color

--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -11,6 +11,7 @@
   --card-background: #1b263bff;
   --button-bg: #778da9ff;
   --button-hover-bg: #415a77ff;
+  --button-text-color: #121212;
 }
 
 /* Light Mode */
